--- a/public/calcView.html
+++ b/public/calcView.html
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    <script src="/js/lib/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/calcFunc.js"></script>
 </body>
 
